--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".Chapter"
             ></activity>
+        <activity android:name=".Tasks"/>
     </application>
 
 </manifest>
