nu fungerar allt och inget kraschar

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".MyRates" />
         <activity android:name=".MyUploads" />
         <activity android:name=".ProfilePage" />
+        <activity android:name=".Books" />
     </application>
 
 </manifest>
