Nu går det att hämta och visa bilder från databasen samt försökt implementera Menu

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     implementation 'net.gotev:uploadservice:2.1'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
