--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,6 +29,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Chapter" />
+        <activity android:name=".Menu" />
+        <activity android:name=".ViewSolution" />
         <activity android:name=".Tasks" />
         <activity android:name=".Homepage" />
         <activity android:name=".Forgot" />
