--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".GiveAccess"></activity>
+
+        <activity android:name=".FullScreenImage" />
+        <activity android:name=".GiveAccess" />
         <activity android:name=".RemoveUser" />
         <activity android:name=".Administration" />
         <activity android:name=".uploadSolution" />
@@ -31,6 +33,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SeeReportedSolutions" />
+        <activity android:name=".ReportedSolution" />
         <activity android:name=".SeeSolutions" />
         <activity android:name=".Chapter" />
         <activity android:name=".Menu" />
